# djangodbu

./: LICENSE.txt  README.md  README.rst  pyproject.toml  setup.py
djangodbu/: __init__.py  shell.py  sql.py  terminalsize.py  unihl.py  utils.py
src/djangodbu/: __init__.py  ago.py  shell.py  unihl.py  utils.py
