[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "djangodbu"
version = "0.1.6"
authors = [
  { name="Valtteri Kortesmaa", email="mulperns+please-remove-this-part-and-change-p-to-d@iki.fi" },
]
description = "Tools for debugging Django ORM, pprint models"
readme = "README.md"
requires-python = ">=3.7"
dependencies = ['sqlparse']
keywords = ['django', 'debug', 'shell_plus', 'orm', 'pprint']
classifiers = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    'Development Status :: 4 - Beta',

    # Indicate who your project is intended for
    'Intended Audience :: Developers',
    'Topic :: Software Development',

    # Pick your license as you wish (should match "license" above)
    'License :: OSI Approved :: MIT License',

    # Specify the Python versions you support here. In particular, ensure
    # that you indicate whether you support Python 2, Python 3 or both.
    #'Programming Language :: Python :: 2',
    #'Programming Language :: Python :: 2.7',
    'Programming Language :: Python :: 3',
    #'Programming Language :: Python :: 3.3',
    #'Programming Language :: Python :: 3.4',
    #'Programming Language :: Python :: 3.5',
]


[project.urls]
"Homepage" = "https://github.com/mulderns/djangodbu"
"Bug Tracker" = "https://github.com/mulderns/djangodbu/issues"